# wav2vecpretrain

./: pyproject.toml  run_wav2vec2_pretraining_no_trainer.py
